# integracion_arca

./: .env  Cargo.toml
src/: crypto.rs  lib.rs  qr_make.rs  types.rs  wsaa.rs  wsbfev1.rs  wscpe.rs  wsfev1.rs  wsfexv1.rs  wslpg.rs  xml_utils.rs
src/crypto/: sign_cms.rs
src/qr_make/: func.rs  tests.rs
src/types/: dummy_result.rs  enums.rs  errors.rs
src/wsaa/: auth_arca.rs  get_token.rs  url.rs  validate_crt.rs
src/wsbfev1/: service_status.rs  url.rs
src/wscpe/: service_status.rs  url.rs
src/wsfev1/: fe_cae_solicitar.rs  service_status.rs  types.rs  url.rs
src/wsfev1/fe_cae_solicitar/: generar_request.rs  parse_response.rs  types.rs
src/wsfev1/types/: wsfev1obs.rs  wsfev1ok.rs
src/wsfexv1/: service_status.rs  url.rs
src/wslpg/: service_status.rs  url.rs
src/wsmtxca/: service_status.rs  url.rs
src/xml_utils/: get_xml_tag.rs
