[package]
name = "integracion_arca"
version = "0.1.0"
edition = "2021"

[dependencies]
base64           = { version = "0.22.1" , default-features = false }
chrono           = { version = "0.4.41" , default-features = false, features = ["serde", "now"] }
dashmap          = { version = "6.1.0"  , default-features = false }
openssl          = { version = "0.10.72", default-features = false, features = ["vendored"] }
qrcode-generator = { version = "5.0.0"  , default-features = false, features = ["image"] }
reqwest          = { version = "0.12.15", default-features = false, features = ["rustls-tls"] }
serde            = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json       = { version = "1.0.140", default-features = false, features = ["std"] }

[dev-dependencies]
dotenvy = "0.15.7"
