[package]
name = "integracion_arca"
version = "0.1.0"
edition = "2024"

[dependencies]
base64           = { version = "0.22.1" , default-features = false, optional= true }
chrono           = { version = "0.4.41" , default-features = false, optional= true , features = ["serde", "now"] }
dashmap          = { version = "6.1.0"  , default-features = false, optional= true }
openssl          = { version = "0.10.72", default-features = false, optional= true , features = ["vendored"] }
qrcode-generator = { version = "5.0.0"  , default-features = false, optional= true , features = ["image"] }
reqwest          = { version = "0.12.15", default-features = false, optional= true , features = ["rustls-tls"] }
serde            = { version = "1.0.225", default-features = false, optional= false, features = ["derive"] }
serde_json       = { version = "1.0.140", default-features = false, optional= false, features = ["std"] }

[dev-dependencies]
dotenvy = "0.15.7"


[features]
wsaa                    = ["dep:openssl"]
dummy_type              = []
qr_make                 = ["dep:qrcode-generator","dep:base64"]

wsfev1_url              = []
wsfev1_dummy            = ["wsfev1_url","dummy_type","dep:reqwest"]
wsfev1_fe_cae_solicitar = ["wsfev1_url","wsaa", "dep:reqwest","dep:chrono","dep:dashmap"]


wsfev1 = [
	"wsfev1_dummy", 
	"wsfev1_fe_cae_solicitar"
]
